--- a/ExpressoPizza.Infra.Data/ExpressoPizza.Infra.Data.csproj
+++ b/ExpressoPizza.Infra.Data/ExpressoPizza.Infra.Data.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\PizzaRepositorio.cs" />
+    <Compile Include="Repositorio\Repositorio .cs" />
     <Compile Include="Repositorio\ClienteRepositorio.cs" />
     <Compile Include="Repositorio\UsuarioRepositorio.cs" />
   </ItemGroup>
